# collaborative-fiction

./: .env.example  .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  auth.go  docker-compose.yml  main.go  story.go
script/: curlit  psql
src/: auth.rs  error.rs  main.rs  model.rs  oauth.rs  snippets.rs  stories.rs  story.rs  whoami.rs
src/model/: mod.rs  session.rs  snippet.rs  story.rs  user.rs
src/oauth/: connection.rs  github.rs  mod.rs
templates/: login.html  snippet-form.html  welcome.html
