[package]

name = "collabfict"
version = "0.0.1"
authors = [ "Ash Wilson <smashwilson@gmail.com>" ]

[[bin]]

name = "collabfict"

[dependencies]
log = "*"
env_logger = "*"
iron = "*"
router = "*"
rand = "*"
hyper = "*"
rustc-serialize = "*"
url = "*"

[dependencies.persistent]
git = "https://github.com/smashwilson/persistent.git"
branch = "fix-build"

[dependencies.postgres]
git = "https://github.com/s-panferov/rust-postgres.git"
branch = "feature/update-openssl"
