[package]

name = "collabfict"
version = "0.0.1"
authors = [ "Ash Wilson <smashwilson@gmail.com>" ]

[[bin]]

name = "collabfict"

[dependencies]
log = "*"
env_logger = "*"
iron = "*"
router = "*"
persistent = "*"
bodyparser = "*"
rand = "*"
hyper = "*"
rustc-serialize = "*"
url = "*"
r2d2 = "*"
r2d2_postgres = "*"
plugin = "*"
time = "*"

[dependencies.postgres]
version = "*"
features = ["time"]
