[package]

name = "collabfict"
version = "0.0.1"
authors = [ "Ash Wilson <smashwilson@gmail.com>" ]

[[bin]]

name = "collabfict"

[dependencies]
log = "0.3.5"
env_logger = "0.3.2"
iron = "0.2.6"
router = "0.1.0"
persistent = "0.0.9"
bodyparser = "0.0.6"
rand = "0.3.13"
hyper = "0.7.2"
rustc-serialize = "0.3.16"
url = "0.5.4"
r2d2 = "0.6.3"
r2d2_postgres = "0.10.0"
plugin = "0.2.6"
chrono = "0.2.19"

[dependencies.postgres]
version = "0.11"
features = ["chrono"]
